# SimulationCity

./: .gitignore  Procfile  README.md  design-document.md  development-roadmap.md  docker-compose.yml  game-design.md  premium-features.md  tech-stack.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: change_stream.py  config.py  constants.py  database.py  main.py  socket_handlers.py  viewport_store.py
backend/app/models/: chunk.py  city.py  player.py
backend/app/routers/: auth.py  cities.py
backend/app/schemas/: cities.py
backend/app/services/: auth.py
backend/tests/: conftest.py  test_build_actions.py  test_change_stream.py  test_simulation.py  test_socket_build_action.py  test_socket_handlers.py  test_viewport_socket.py  test_viewport_store.py
backend/workers/: build_actions.py  celery_app.py  simulation.py
docs/: todo.md
docs/superpowers/plans/: 2026-03-15-asset-manager.md  2026-03-21-phase2-celery-integration.md  2026-03-24-phase3a-change-streams.md  2026-03-24-phase3b-viewport-subscriptions.md  2026-03-25-phase4-frontend-game-canvas.md  2026-03-26-phase5a-hud-panels.md
docs/superpowers/specs/: 2026-03-15-artwork-tool-design.md  2026-03-20-phase2-celery-integration-design.md  2026-03-24-phase3a-change-streams-design.md  2026-03-24-phase3b-viewport-subscriptions-design.md  2026-03-25-phase4-frontend-game-canvas-design.md  2026-03-26-phase5a-hud-panels-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  socket.test.ts  socket.ts
frontend/src/components/: HUD.tsx  (+7 more)
(+9 files in other folders)
